[gd_scene load_steps=4 format=3 uid="uid://bto4wt5sko52r"]

[ext_resource type="Script" path="res://UI/Elements/player_change.gd" id="1_2swop"]
[ext_resource type="Texture2D" uid="uid://kptwp81o3y1q" path="res://Textures/Raw/menuAddon.png" id="1_jort0"]
[ext_resource type="FontFile" uid="uid://wp1gar4mv6d6" path="res://UI/Fonts/FontAdv_FD_224.fnt" id="2_tp848"]

[node name="player_change" type="Control"]
custom_minimum_size = Vector2(450, 75)
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
script = ExtResource("1_2swop")

[node name="change_button" type="TextureButton" parent="."]
custom_minimum_size = Vector2(448, 72)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -224.0
offset_right = 224.0
offset_bottom = 72.0
grow_horizontal = 2
mouse_default_cursor_shape = 2

[node name="NinePatchRect" type="NinePatchRect" parent="change_button"]
custom_minimum_size = Vector2(448, 72)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -230.5
offset_right = 230.5
offset_bottom = 72.0
grow_horizontal = 2
texture = ExtResource("1_jort0")
region_rect = Rect2(256, 128, 256, 64)
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="change_button/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.5
offset_top = -31.0
offset_right = 202.5
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -4
alignment = 1

[node name="Label" type="Label" parent="change_button/NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_tp848")
theme_override_font_sizes/font_size = 28
text = "Welcome, PLAYER_NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="change_button/NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_tp848")
theme_override_font_sizes/font_size = 28
text = "(If this is not you, please click here)"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="change_button" to="." method="_on_change_button_mouse_entered"]
[connection signal="pressed" from="change_button" to="." method="_on_change_button_pressed"]
